src/App.css
@charset "UTF-8";

@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap');

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body {
  font-family: 'Open Sans', sans-serif;
  background-color: #f0f0f0;
  color: #0b2138;
}

p {
  color: #5c5c5c;
}

.container {
  display: flex;
  height: 100vh;
  flex-direction: column;
  align-items: center;
}

.main-contain {
  width: 800px;
  flex-direction: column;
  display: flex;
  margin-top: 30px;
}

@media screen and (max-width: 768px) {
  .main-contain {
    width: 80%;
    flex-direction: column;
    display: flex;
    justify-content: center;
  }
}

.input-container {
  margin-top: 20px;
  margin-bottom: 20px;
  position: relative;
  display: flex;
}

.input-container input {
  width: 100%;
  border: 1px solid #e1e4e8;
  border-right: none;
  border-radius: 4px;
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
  outline: none;
  padding: 12px 12px 20px 48px;
  font-size: 2rem;
  color: #0b2138;
  font-family: 'Open Sans', sans-serif;
  font-weight: 600;
}

@media screen and (max-width: 768px) {
  .input-container {
    flex-direction: column;
  }

  .input-container input {
    padding: 12px 57px 20px 48px;
    font-size: 1.5rem;
  }
}

.button {
  background-color: #ff4163;
  color: white;
  display: flex;
  align-items: center;
  font-size: 1rem;
  font-weight: 600;
  padding: 20px;
  border: none;
  border-bottom: 4px solid #dd2345;
  outline: none;
  position: relative;
  border-top-right-radius: 4px;
  border-bottom-right-radius: 4px;
}

.button span {
  margin-left: 10px;
}

.button:hover {
  cursor: pointer;
}

.button:active {
  background-color: #fc4c6c;
  outline: none;
  position: relative;
  border-bottom: 0;
}

.copied-animation::after {
  display: inline;
  color: white;
  position: absolute;
  left: 15px;
  width: 90px;
  content: '👍🏻 Copied!';
  animation: 1s ease-in-out 0s 1 normal forwards running copyit;
}

@keyframes copyit {
  0% {
    bottom: 2.4em;
    opacity: 1;
  }

  100% {
    bottom: 3.4em;
    opacity: 0;
  }
}

@media screen and (max-width: 768px) {
  .button {
    margin-top: 30px;
    font-size: 2rem;
    justify-content: center;
  }

  .button:active {
    border-bottom: 4px solid #dd2345;
  }

  .copied-animation::after {
    display: inline;
    color: white;
    position: absolute;
    left: 15px;
    top: 0;
    width: 290px;
    content: '👍🏻 Copied!';
    animation: 1s ease-in-out 0s 1 normal forwards running copyit;
  }
}

.label-input-checkbox {
  -webkit-user-select: none;
  user-select: none;
  cursor: pointer;
  border-radius: 6px;
  transition: all 0.2s ease;
  -webkit-tap-highlight-color: transparent;
}

.label-input-checkbox .check-box {
  float: left;
  vertical-align: middle;
  transform: translate3d(0, 0, 0);
}

.input-checkbox {
  position: absolute;
  visibility: hidden;
}

.slider-p span {
  color: #333;
  font-weight: 600;
}

.label-input-checkbox span:first-child {
  position: relative;
  width: 18px;
  height: 18px;
  border-radius: 4px;
  transform: scale(1);
  border: 1px solid #cccfdb;
  transition: all 0.2s ease;
  box-shadow: 0 1px 1px rgba(0, 16, 75, 0.05);
  -webkit-tap-highlight-color: transparent;
}

.label-input-checkbox span:first-child svg {
  position: absolute;
  top: 3px;
  left: 2px;
  fill: none;
  stroke: #fff;
  stroke-width: 3;
  stroke-linecap: round;
  stroke-linejoin: round;
  stroke-dasharray: 16px;
  stroke-dashoffset: 16px;
  transition: all 0.3s ease;
  transition-delay: 0.1s;
  transform: translate3d(0, 0, 0);
}

.label-input-checkbox:hover span:first-child {
  border-color: #ff4163;
}

.input-checkbox:checked + .label-input-checkbox span:first-child {
  background: #ff4163;
  border-color: #ff4163;
  animation: wave 0.4s ease;
}

.input-checkbox:checked + .label-input-checkbox span:first-child svg {
  stroke-dashoffset: 0;
}

.inline-svg {
  position: absolute;
  width: 0;
  height: 0;
  pointer-events: none;
  user-select: none;
}

.label-input-checkbox .check-box-label {
  padding-left: 8px;
  line-height: 18px;
}

.label-mobile {
  display: none;
}

@-moz-keyframes wave {
  50% {
    transform: scale(0.9);
  }
}

@-webkit-keyframes wave {
  50% {
    transform: scale(0.9);
  }
}

@-o-keyframes wave {
  50% {
    transform: scale(0.9);
  }
}

@keyframes wave {
  50% {
    transform: scale(0.9);
  }
}

@media screen and (max-width: 768px) {
  .label-input-checkbox .check-box-label {
    display: none;
  }

  .label-mobile {
    display: flex;
    padding-left: 8px;
    line-height: 18px;
  }
}

.secure-bar {
  position: absolute;
  bottom: 0;
  min-height: 8px;
  line-height: 8px;
  z-index: 10;
  -webkit-transition: width 0.3s ease-in-out;
  -moz-transition: width 0.3s ease-in-out;
  -o-transition: width 0.3s ease-in-out;
  transition: width 0.3s ease-in-out;
}

.very-weak-password,
.weak-password {
  background-color: #d63031;
}

.medium-password {
  background-color: #f39c12;
  width: 51.6%;
}

.strong-password,
.very-strong-password {
  background-color: #2ecc71;
}

.very-weak-password {
  width: 17.2%;
}

.weak-password {
  width: 34.4%;
}

.strong-password {
  width: 68.8%;
}

.very-strong-password {
  width: 86%;
}

.secure-bar-background {
  position: absolute;
  bottom: 0;
  min-height: 8px;
  line-height: 8px;
  width: 86%;
  z-index: 1;
}

.very-weak-password-background,
.weak-password-background {
  background-color: #e99990;
}

.medium-password-background {
  background-color: #f3e1c7;
}

.strong-password-background,
.very-strong-password-background {
  background-color: #c2e4d0;
}

@media screen and (max-width: 768px) {
  .secure-bar {
    bottom: 93px;
  }

  .secure-bar-background {
    bottom: 93px;
    width: 100%;
  }

  .very-weak-password {
    width: 10%;
  }

  .weak-password {
    width: 40%;
  }

  .medium-password {
    width: 60%;
  }

  .strong-password {
    width: 80%;
  }

  .very-strong-password {
    width: 100%;
  }
}

input[type='range'] {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  padding: 0;
  width: 100%;
  height: 10px;
  cursor: pointer;
  display: block;
  z-index: 2;
  position: relative;
  background-color: transparent;
  outline: none;
  -webkit-tap-highlight-color: transparent;
}

input[type='range']::-moz-range-track {
  width: 100%;
  height: 4px;
  background: #fff;
  border-radius: 100px;
  margin: 11px 0;
}

input[type='range']::-ms-track {
  width: 100%;
  height: 4px;
  background: #fff;
  border-radius: 100px;
  color: transparent;
  padding: 11px 0;
  border-color: transparent;
}

input[type='range']::-ms-fill-lower,
input[type='range']::-ms-fill-upper {
  width: 100%;
  height: 4px;
  background: #fff;
  border-radius: 100px;
}

input[type='range']::-ms-fill-lower {
  background: #ff4163;
}

input[type='range']::-webkit-slider-thumb {
  border: 8px solid #fff;
  height: 34px;
  width: 34px;
  border-radius: 100px;
  background: #ff4163;
  cursor: pointer;
  -webkit-appearance: none;
  appearance: none;
  transform: translate(-2%, 14%);
}

input[type='range']::-moz-range-thumb,
input[type='range']::-ms-thumb {
  border: 6px solid #eee;
  height: 34px;
  width: 34px;
  border-radius: 100px;
  background: #ff4163;
  cursor: pointer;
}

.track-bar {
  position: absolute;
  border-radius: 10px;
  z-index: 1;
  left: 0;
  top: 5px;
  width: 99%;
  height: 10px;
  background-color: #fff;
  overflow: hidden;
}

.track-bar .progress-bar {
  display: block;
  height: 100%;
  background-color: #ff4163;
}

.title-container {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.title-container h1 {
  font-size: 2.25rem;
}

.title-container p {
  margin-top: 15px;
}

@media screen and (max-width: 768px) {
  .title-container h1 {
    font-size: 30px;
    text-align: center;
  }
  .title-container p {
    text-align: center;
    width: 300px;
  }
}

.header {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  background-color: #fff;
  height: 35vh;
  width: 100%;
}

.lottie-animation {
  width: 169px;
  height: 146px;
}

@media screen and (max-width: 768px) {
  .lottie-animation {
    width: 103px;
    height: 80px;
  }

  .header {
    height: 37vh;
  }
}

.lock-icon {
  position: absolute;
  top: 15px;
  left: 10px;
}

.sync-container {
  position: absolute;
  right: 130px;
  top: 20px;
  color: #ccc;
  cursor: pointer;
}

.sync-animation {
  animation: spin infinite 0.4s linear;
}

.slider-p {
  font-size: 18px;
}

@keyframes spin {
  from {
    transform: rotate(0deg);
  }

  to {
    transform: rotate(360deg);
  }
}

.checkboxes-container {
  display: flex;
  justify-content: space-between;
  margin-bottom: 20px;
}

.mega-container {
  display: flex;
  position: relative;
  margin-bottom: 40px;
  width: 70%;
}

.slider-container {
  display: flex;
  justify-content: space-between;
  margin-top: 20px;
}

@media screen and (max-width: 768px) {
  .slider-container {
    flex-direction: column;
    margin-top: 0;
  }

  .mega-container {
    width: 100%;
  }

  .slider-p {
    font-size: 22px;
    margin-bottom: 20px;
    text-align: center;
  }

  .sync-container {
    right: 15px;
    top: 14px;
    -webkit-tap-highlight-color: transparent;
  }

  .lock-icon {
    top: 11px;
  }
}

/*# sourceMappingURL=App.css.map */

